--- a/discordbot/index.html
+++ b/discordbot/index.html
@@ -54,7 +54,7 @@
 		<div class="container"></br>
 			<p class="intro">
 			<div align=center>
-				<h1><b><span>MinhTonChannel#7016</span></b></h1>
+				<h1><b><span>MinhTonChannel</span></b></h1>
 			</div>
 			<div align=center>
 				<h1>
@@ -185,7 +185,7 @@
 							<div>
 								<p>
 								<div align=center>
-									<h1><span>MinhTonChannel#7016</span>
+									<h1><span>MinhTonChannel</span>
 								</div>
 								<div align=center>
 									The official release of the Bot that people use in their servers.
@@ -212,7 +212,7 @@
 							<div>
 								<p>
 								<div align=center>
-									<h1><span>MTC - Beta#0484</span>
+									<h1><span>MTC - Beta</span>
 								</div>
 								<div align=center>
 									The private Bot for our development work.
