--- a/discordbot/index.html
+++ b/discordbot/index.html
@@ -193,7 +193,7 @@
 									Our development team deliver a <em>fast</em>, <em>user-friendly</em>, <em>quality</em>, and <em>less downtime</em> with this release.
 									<br>
 									<br>
-									<a href="https://discord.com/oauth2/authorize?client_id=711452937137946675&scope=bot&permissions=8" class="button">Add me to your Discord Server</a>
+									<a href="https://discord.com/oauth2/authorize?client_id=711452937137946675&scope=bot&permissions=8" class="button">Add to your Server</a>
 								</div>
 								</p>
 							</div>
@@ -220,7 +220,7 @@
 									This Bot is not available publicly simply because it is untested or unstable, therefore it does not online reliably.
 									<br>
 									<br>
-									<button class="button">Development Team only</button>
+									<button class="button">Not Available</button>
 								</div>
 								</p>
 							</div>
