--- a/discordbot/index.html
+++ b/discordbot/index.html
@@ -220,7 +220,7 @@
 									This Bot is not available publicly simply because it is untested or unstable, therefore it does not online reliably.
 									<br>
 									<br>
-									<button class="button">Not Available</button>
+									<a href="https://discord.com/oauth2/authorize?client_id=711452937137946675&scope=bot&permissions=8" class="button">Not Available</a>
 								</div>
 								</p>
 							</div>
