--- a/discordbot/index.html
+++ b/discordbot/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 	<link rel="icon" type="image/x-icon" href="assets/img/mtc-light.png">
-	<meta name="author" content="Hassan Ali">
+	<meta name="author" content="Ford Ton">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
