--- a/index.html
+++ b/index.html
@@ -1,9 +1,243 @@
-<!DOCTYPE html> 
-<html> 
-<head> 
-	<title>MinhTon's Personal Website</title> 
-	<meta http-equiv="refresh"
-		content="0; url = https://sites.google.com/view/minhton" /> 
-</head> 
-</html> 
+<!DOCTYPE html>
+<html>
 
+<head>
+	<title>Discord Bot</title>
+	<!-- css files -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+
+	<link rel="icon" type="image/x-icon" href="assets/img/mtc-light.png">
+	<meta name="author" content="Ford Ton">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+	<!-- Navbar -->
+	<nav class="nav container void-background">
+		<!-- This "nav-menu" is hidden on mobile -->
+		<!-- Add the modifier "is-active" to display it on mobile -->
+		<div class="nav-left">
+			<a href="mailto:ford.tonthat@icloud.com" class="nav-item">
+				<span class="icon">
+					<i class="fa fa-paper-plane"></i>
+				</span>
+			</a>
+			<a href="http://github.com/minh-ton" class="nav-item">
+				<span class="icon">
+					<i class="fa fa-github"></i>
+				</span>
+			</a>
+		</div>
+
+		<div class="nav-right nav-menu">
+			<a class="nav-item" href="#about">About</a>
+			<a class="nav-item" href="#team">Development Team</a>
+			<a class="nav-item" href="#releases">Releases</a>
+		</div>
+
+		<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
+		<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
+		<span class="nav-toggle">
+			<span></span>
+			<span></span>
+			<span></span>
+		</span>
+	</nav>
+
+	<!-- About Me -->
+	<section id="about" class="section section-1">
+		<div class="container has-text-centered">
+			<img class="avatar" src="assets/img/mtc-light.png">
+		</div>
+		<div class="container"></br>
+			<p class="intro">
+			<div align=center>
+				<h1><b><span>MinhTonChannel</span></b></h1>
+			</div>
+			<div align=center>
+				<h1>
+					<span2>An</span2> <span>AI-integrated</span>, <span>Moderation</span>, <span>Entertainment</span>, <span2>and</span2> <span>Music Bot</span>
+					<span2>for your Discord Server!</span2>
+				</h1>
+				<br>
+				<a href="https://discord.com/oauth2/authorize?client_id=711452937137946675&scope=bot&permissions=8" class="button">Add to your Discord Server</a>
+			</div>
+			</p>
+		</div>
+	</section>
+
+	<!-- Dev Team -->
+	<section id="team" class="section section-3">
+		<div class="container"></br>
+			<div class="has-text-centered">
+				<h3 class="title is-3">Development Team</h3>
+			</div>
+			<div class="columns is-multiline is-desktop">
+
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image dev">
+									<img src="assets/img/minh-round.png" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+								<div align=center>
+									<h1><b><span>MinhTon</span></b>
+								</div>
+								<div align=center>
+									<job>Main Developer</job>
+									<br>
+									<br>
+									<p align=center>
+										A computer lover, astronomy lover, an inactive YouTuber, and a coder.
+									</p>
+									<br>
+								</div>
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image dev">
+									<img src="assets/img/fus-round.png" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+								<div align=center>
+									<h1><b><span>Tofu02</span></b>
+								</div>
+								<div align=center>
+									<job>Contributor</job>
+									<br>
+									<br>
+									<p align=center>
+										A gamer (but not really), tech lover, discord fanboy, and a socially awkward person.
+									</p>
+									<br>
+								</div>
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image dev">
+									<img src="assets/img/fami-round.png" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+								<div align=center>
+									<h1><b><span>Familia</span></b>
+								</div>
+								<div align=center>
+									<job>Tester</job>
+									<br>
+									<br>
+									<p align=center>
+										A macOS/iOS Developer, a video editor, dog lover, cat lover, and <b>a good dad</b>.
+									</p>
+									<br>
+								</div>
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Projects -->
+	<section id="releases" class="section section-2">
+		<div class="container">
+			<div class="has-text-centered">
+				<h3 class="title is-3">Releases</h3>
+			</div>
+
+			<div class="columns is-multiline is-desktop">
+				<!-- Project 1 -->
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image project-figure">
+									<img src="assets/img/mtc-light.png" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+								<div align=center>
+									<h1><span>MinhTonChannel</span>
+								</div>
+								<div align=center>
+									The official release of the Bot that people use in their servers.
+									<br>
+									Our development team deliver a <em>fast</em>, <em>user-friendly</em>, <em>quality</em>, and <em>less downtime</em> with this release.
+									<br>
+									<br>
+									<a href="https://discord.com/oauth2/authorize?client_id=711452937137946675&scope=bot&permissions=8" class="button">Add to your Server</a>
+								</div>
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+				<!-- Project 2 -->
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image project-figure">
+									<img src="assets/img/mtc-dark.png" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+								<div align=center>
+									<h1><span>MTC - Beta</span>
+								</div>
+								<div align=center>
+									The private Bot for our development work.
+									<br>
+									This Bot is not available publicly simply because it is untested or unstable, therefore it does not online reliably.
+									<br>
+									<br>
+									<a href="https://discord.com/oauth2/authorize?client_id=711452937137946675&scope=bot&permissions=8" class="button">Not Available</a>
+								</div>
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Footer -->
+	<section class="section-4 has-text-centered container">
+		<a href="https://sites.google.com/view/minhton/about-me">Copyright © 2020 MinhTon. All rights reserved.</a>
+	</section>
+
+	<!-- Scripts  -->
+	<script src="controller.js"></script>
+</body>
+
+</html>
