--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   You can chat with the Bot via Direct Message if you feel bored, with the latest AI Technology, the Bot will reply to your message!
                   <br>
                   <br>
-                  <a href="https://minh-ton.github.io/volumeicon/discordbot" class="button">Learn more</a>
+                  <a href="https://minh-ton.github.io/discordbot" class="button">Learn more</a>
                 </div>
                 </p>
               </div>
@@ -208,7 +208,7 @@
                   <h1><span>HTML Screensavers</span>
                 </div>
                 <div align=center>
-                  I create this app for people who don't know anything about Apple's Swift or Objective C Programming Language, to create their own Screensaver and run right on their Mac using HTML.
+                  I created this app for people who don't know anything about Apple's Swift or Objective C Programming Language, to create their own Screensaver and run right on their Mac using HTML.
                   <br>
                   Basically, you just need to have some HTML, CSS, or Javascript knowledge to create a beautiful Screensaver!
                   <br>
