--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container"></br>
       <p class="intro">
       <div align=center>
-        <h1><span><span><span>MinhTon</span></span></span></h1>
+        <h1><span><span>MinhTon</span></span></h1>
       </div>
       <div align=center>
         <h1>
@@ -233,12 +233,11 @@
       <iframe src="https://youcount.github.io/e/#!/Minh+Ton" height="100" width="250" frameborder="0"></iframe>
     </div>
 
-    <div align=center>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/SWWh1kHOqOk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/PAJ0dvrmmE0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/FpzzWLDEdX4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/hzTwcoUjUhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div align=center id="iframe">
+      <iframe width=auto height=auto src="https://www.youtube.com/embed/SWWh1kHOqOk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width=auto height=auto src="https://www.youtube.com/embed/PAJ0dvrmmE0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width=auto height=auto src="https://www.youtube.com/embed/FpzzWLDEdX4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width=auto height=auto src="https://www.youtube.com/embed/hzTwcoUjUhA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
   </section>
