--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
     <div class="container"></br>
       <p class="intro">
       <div align=center>
-        <h1><span><span><span>Contact</span></span></span></h1>
+        <h1><span><span>Contact</span></span></h1>
       </div>
       <div align=center>
         <h1>
