--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <div class="nav-right nav-menu">
                 <a class="nav-item" href="https://minh-ton.github.io/about">About</a>
                 <a class="nav-item" href="https://minh-ton.github.io/contact">Contact</a>
+                <p class="nav-item"><span>
+                <script> document.write(new Date().toLocaleDateString()); </script>
+                </span></p>
             </div>
 
     <!-- This "nav-toggle" hamburger menu is only visible on mobile -->
