--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     A great tool for you to view your Mac's Current Temperature, Fan Speed, Uptime, and More!
                   </p>
                   <br>
-                  <a href="https://minh-ton.github.io/sensorsmenu" class="button">Learn more</a>
+                  <a href="https://github.com/Minh-Ton/SensorsMenu" class="button">Learn more</a>
                 </div>
                 </p>
               </div>
@@ -126,7 +126,7 @@
                     Allows you to Create a Bootable Installer & Download macOS directly from Apple, just in one application.
                   </p>
                   <br>
-                  <a href="https://minh-ton.github.io/installcreator" class="button">Learn more</a>
+                  <a href="https://github.com/Minh-Ton/openinstallcreator" class="button">Learn more</a>
                 </div>
                 </p>
               </div>
@@ -152,7 +152,7 @@
                     A pretty dumb app that I created for non-APFS Macs to change the disk logo inside Apple Boot Manager.
                   </p>
                   <br>
-                  <a href="https://minh-ton.github.io/volumeicon" class="button">Learn more</a>
+                  <a href="https://github.com/Minh-Ton/VolumeIcon" class="button">Learn more</a>
                 </div>
                 </p>
               </div>
