--- a/index.html
+++ b/index.html
@@ -178,6 +178,32 @@
           <div class="box project-text">
             <article>
               <div align=center>
+                <img src="https://github.com/Minh-Ton/Control-Center/raw/master/Control%20Center/Assets.xcassets/Control%20Center.appiconset/1024.png" alt="Image" width=35%>
+              </div>
+              <div>
+                <p>
+                <div align=center>
+                  <h1><span>Control Center</span>
+                </div>
+                <div align=center>
+                  In macOS Big Sur, Apple introduced a new Control Center for the Mac, which is quite awesome. I made this app to port the new Control Center to older macOS, from 10.12 Sierra to 10.15 Catalina.
+                  <br>
+                  <br>
+                  This app features Connectivity Toggles, Volume/Brightness Controls, Weather and many cool features from the original Control Center!
+                  <br>
+                  <br>
+                  <a href="https://minh-ton.github.io/Control-Center" class="button">Learn More</a>
+                </div>
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="box project-text">
+            <article>
+              <div align=center>
                 <img src="assets/img/mtc-light.png" alt="Image" width=35%>
               </div>
               <div>
@@ -193,32 +219,6 @@
                   <br>
                   <br>
                   <a href="https://minh-ton.github.io/discordbot" class="button">Learn more</a>
-                </div>
-                </p>
-              </div>
-            </article>
-          </div>
-        </div>
-
-        <div class="column">
-          <div class="box project-text">
-            <article>
-              <div align=center>
-                <img src="assets/img/hscsv-1024.png" alt="Image" width=35%>
-              </div>
-              <div>
-                <p>
-                <div align=center>
-                  <h1><span>HTML Screensavers</span>
-                </div>
-                <div align=center>
-                  I created this app for people who don't know anything about Apple's Swift or Objective C Programming Language, to create their own Screensaver and run right on their Mac using HTML.
-                  <br>
-                  <br>
-                  Basically, you just need to have some HTML, CSS, or Javascript knowledge to create a beautiful Screensaver!
-                  <br>
-                  <br>
-                  <a href="https://github.com/Minh-Ton/HTML-Screensaver" class="button">Learn More</a>
                 </div>
                 </p>
               </div>
