--- a/index.html
+++ b/index.html
@@ -247,10 +247,17 @@
 
   </section>
 
+  <section id="chat" class="section section-2">
+    <div class="has-text-centered">
+      <h3 class="title is-2">Chat with me!</h3>
+    </div>
+    <iframe src="https://e.widgetbot.io/channels/707564487456325653/707564487456325656" height=500 width=100%></iframe>
+  </section>
+
 
   <!-- Footer -->
   <section class="section-4 has-text-centered container">
-    <a href="https://sites.google.com/view/minhton/about-me">Copyright © 2020 MinhTon. All rights reserved.</a>
+    <a href="https://sites.google.com/view/minhton/about-me">MinhTon | 2020</a>
   </section>
 
   <!-- Scripts  -->
